--- a/DesktopApp/nbproject/private/private.properties
+++ b/DesktopApp/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=/Users/abdelazizlahmar/Library/Application Support/NetBeans/8.2/build.properties
+user.properties.file=C:\\Users\\Gaaloul\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
