--- a/DesktopApp/nbproject/private/private.properties
+++ b/DesktopApp/nbproject/private/private.properties
@@ -1,2 +1,3 @@
 compile.on.save=true
-user.properties.file=/Users/abdelazizlahmar/Library/Application Support/NetBeans/8.2/build.properties
+file.reference.mysql-connector-j-8.0.32.jar=C:\\Program Files (x86)\\MySQL
+user.properties.file=C:\\Users\\Saleh\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
