--- a/DesktopApp/nbproject/private/private.properties
+++ b/DesktopApp/nbproject/private/private.properties
@@ -2,6 +2,6 @@ compile.on.save=true
 
 
 
-user.properties.file=C:\\Users\\Ilef\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=/Users/abdelazizlahmar/Library/Application Support/NetBeans/8.2/build.properties
 
 
