remove fontawesome from project

--- a/DesktopApp/nbproject/project.properties
+++ b/DesktopApp/nbproject/project.properties
@@ -33,14 +33,10 @@ dist.jar=${dist.dir}/DesktopApp.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.fontawesomefx-8.9.jar=C:\\Users\\admin\\Downloads\\fontawesomefx-8.9.jar
-file.reference.jfoenix-9.0.8.jar=C:\\Users\\admin\\Downloads\\jfoenix-9.0.8.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.MySQLDriver.classpath}:\
-    ${file.reference.fontawesomefx-8.9.jar}:\
-    ${file.reference.jfoenix-9.0.8.jar}
+    ${libs.MySQLDriver.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
