crud fixed + design livre

--- a/DesktopApp/nbproject/private/private.properties
+++ b/DesktopApp/nbproject/private/private.properties
@@ -7,5 +7,5 @@ javac.debug=true
 javadoc.preview=true
 
 
-user.properties.file=C:\\Users\\admin\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\Saleh\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
 
