search+Reservation interface + updated version of evenement

--- a/DesktopApp/nbproject/private/private.properties
+++ b/DesktopApp/nbproject/private/private.properties
@@ -11,7 +11,7 @@ javac.debug=true
 javadoc.preview=true
 
 
-user.properties.file=C:\\Users\\admin\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\SADOK\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
 
 
 
