--- a/DesktopApp/nbproject/project.properties
+++ b/DesktopApp/nbproject/project.properties
@@ -34,11 +34,17 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.itextpdf-5.5.8.jar=C:\\Users\\admin\\Downloads\\jar_files\\itextpdf-5.5.8.jar
+file.reference.itextpdf-5.5.8.jar-1=C:\\Users\\wassi\\Downloads\\jar_files\\itextpdf-5.5.8.jar
+file.reference.jBCrypt-0.4-sources.jar=C:\\Users\\wassi\\Downloads\\jBCrypt-0.4-sources.jar
+file.reference.jBCrypt-0.4.jar=C:\\Users\\wassi\\Downloads\\jBCrypt-0.4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
-    ${file.reference.itextpdf-5.5.8.jar}
+    ${file.reference.itextpdf-5.5.8.jar}:\
+    ${file.reference.itextpdf-5.5.8.jar-1}:\
+    ${file.reference.jBCrypt-0.4-sources.jar}:\
+    ${file.reference.jBCrypt-0.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -71,6 +77,7 @@ main.class=edu.esprit.main.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
+no.dependencies=true
 platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
