--- a/DesktopApp/nbproject/project.properties
+++ b/DesktopApp/nbproject/project.properties
@@ -33,12 +33,14 @@ dist.jar=${dist.dir}/DesktopApp.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.controlsfx-8.40.14.jar=C:\\Users\\admin\\Downloads\\jar_files (1)\\controlsfx-8.40.14.jar
 file.reference.itextpdf-5.5.8.jar=C:\\Users\\admin\\Downloads\\jar_files\\itextpdf-5.5.8.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
-    ${file.reference.itextpdf-5.5.8.jar}
+    ${file.reference.itextpdf-5.5.8.jar}:\
+    ${file.reference.controlsfx-8.40.14.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
