--- a/DesktopApp/nbproject/private/private.properties
+++ b/DesktopApp/nbproject/private/private.properties
@@ -3,13 +3,14 @@ compile.on.save=true
 
 do.depend=false
 do.jar=true
-file.reference.itextpdf-5.5.8.jar=C:\\Users\\wassi\\Downloads\\jar_files\\itextpdf-5.5.8.jar
+file.reference.controlsfx-8.40.14.jar=C:\\Users\\Gaaloul\\Downloads\\controlsfx-8.40.14.jar
+file.reference.itextpdf-5.5.8.jar=C:\\Users\\Gaaloul\\Downloads\\itextpdf-5.5.8.jar
 javac.debug=true
 javadoc.preview=true
 
 
 
-user.properties.file=C:\\Users\\wassi\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\Gaaloul\\AppData\\Roaming\\NetBeans\\15\\build.properties
 
 
 
