--- a/DesktopApp/nbproject/project.properties
+++ b/DesktopApp/nbproject/project.properties
@@ -33,12 +33,16 @@ dist.jar=${dist.dir}/DesktopApp.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.core-3.5.1.jar=C:\\Users\\SADOK\\Downloads\\jar_files (1)\\core-3.5.1.jar
 file.reference.itextpdf-5.5.8.jar=C:\\Users\\admin\\Downloads\\jar_files\\itextpdf-5.5.8.jar
+file.reference.javax.mail-1.6.2.jar=C:\\Users\\SADOK\\Downloads\\javax.mail-1.6.2.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
-    ${file.reference.itextpdf-5.5.8.jar}
+    ${file.reference.itextpdf-5.5.8.jar}:\
+    ${file.reference.core-3.5.1.jar}:\
+    ${file.reference.javax.mail-1.6.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
