send mail api donee ✅ : livre ajouter a une competition

--- a/DesktopApp/nbproject/private/private.properties
+++ b/DesktopApp/nbproject/private/private.properties
@@ -3,13 +3,12 @@ compile.on.save=true
 
 do.depend=false
 do.jar=true
-file.reference.itextpdf-5.5.8.jar=C:\\Users\\wassi\\Downloads\\jar_files\\itextpdf-5.5.8.jar
 javac.debug=true
 javadoc.preview=true
 
 
 
-user.properties.file=C:\\Users\\wassi\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\admin\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
 
 
 
