--- a/DesktopApp/nbproject/project.properties
+++ b/DesktopApp/nbproject/project.properties
@@ -36,14 +36,20 @@ excludes=
 file.reference.controlsfx-8.40.14.jar=C:\\Users\\admin\\Downloads\\jar_files (1)\\controlsfx-8.40.14.jar
 file.reference.itextpdf-5.5.8.jar=C:\\Users\\admin\\Downloads\\jar_files\\itextpdf-5.5.8.jar
 file.reference.itextpdf-5.5.8.jar-1=C:\\Users\\wassi\\Downloads\\jar_files\\itextpdf-5.5.8.jar
+file.reference.javax.mail-1.6.2.jar=C:\\Users\\admin\\Downloads\\javax.mail-1.6.2.jar
 file.reference.jBCrypt-0.4-sources.jar=C:\\Users\\wassi\\Downloads\\jBCrypt-0.4-sources.jar
+file.reference.jBCrypt-0.4-sources.jar-1=C:\\Users\\admin\\Downloads\\jBCrypt-0.4-sources.jar
 file.reference.jBCrypt-0.4.jar=C:\\Users\\wassi\\Downloads\\jBCrypt-0.4.jar
+file.reference.jBCrypt-0.4.jar-1=C:\\Users\\admin\\Downloads\\jBCrypt-0.4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
+    ${file.reference.controlsfx-8.40.14.jar}:\
     ${file.reference.itextpdf-5.5.8.jar}:\
-    ${file.reference.controlsfx-8.40.14.jar}
+    ${file.reference.jBCrypt-0.4.jar-1}:\
+    ${file.reference.jBCrypt-0.4-sources.jar-1}:\
+    ${file.reference.javax.mail-1.6.2.jar}
     ${file.reference.jBCrypt-0.4-sources.jar}:\
     ${file.reference.jBCrypt-0.4.jar}
 
