--- a/DesktopApp/nbproject/project.properties
+++ b/DesktopApp/nbproject/project.properties
@@ -43,8 +43,10 @@ file.reference.itextpdf-5.5.8.jar=C:\\Users\\admin\\Downloads\\jar_files\\itextp
 file.reference.itextpdf-5.5.8.jar-1=C:\\Users\\wassi\\Downloads\\jar_files\\itextpdf-5.5.8.jar
 
 file.reference.javax.mail-1.6.2.jar=C:\\Users\\admin\\Downloads\\javax.mail-1.6.2.jar
+file.reference.javax.mail-1.6.2.jar-1=C:\\Users\\admin\\Downloads\\javax.mail-1.6.2.jar
 file.reference.jBCrypt-0.4-sources.jar=C:\\Users\\wassi\\Downloads\\jBCrypt-0.4-sources.jar
 file.reference.jBCrypt-0.4-sources.jar-1=C:\\Users\\admin\\Downloads\\jBCrypt-0.4-sources.jar
+file.reference.jBCrypt-0.4-sources.jar-2=C:\\Users\\admin\\Downloads\\jBCrypt-0.4-sources.jar
 file.reference.jBCrypt-0.4.jar=C:\\Users\\wassi\\Downloads\\jBCrypt-0.4.jar
 file.reference.jBCrypt-0.4.jar-1=C:\\Users\\admin\\Downloads\\jBCrypt-0.4.jar
 
@@ -54,13 +56,18 @@ file.reference.jBCrypt-0.4-sources.jar=C:\\Users\\wassi\\Downloads\\jBCrypt-0.4-
 file.reference.jBCrypt-0.4-sources.jar-1=..\\..\\..\\Downloads\\jBCrypt-0.4-sources.jar
 file.reference.jBCrypt-0.4.jar=C:\\Users\\wassi\\Downloads\\jBCrypt-0.4.jar
 file.reference.jBCrypt-0.4.jar-1=..\\..\\..\\Downloads\\jBCrypt-0.4.jar
+file.reference.jBCrypt-0.4.jar-2=C:\\Users\\admin\\Downloads\\jBCrypt-0.4.jar
 file.reference.mysql-connector-java-5.1.23.jar=..\\..\\..\\Downloads\\jar_files\\mysql-connector-java-5.1.23.jar
 
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
-
+    ${file.reference.jBCrypt-0.4-sources.jar-2}:\
+    ${file.reference.jBCrypt-0.4.jar-2}:\
+    ${file.reference.javax.mail-1.6.2.jar-1}:\
+    ${file.reference.controlsfx-8.40.14.jar}:\
+    ${file.reference.itextpdf-5.5.8.jar}
     ${file.reference.controlsfx-8.40.14.jar}:\
     ${file.reference.itextpdf-5.5.8.jar}:\
     ${file.reference.core-3.5.1.jar}:\
