excel file generator with API ✅

--- a/DesktopApp/nbproject/project.properties
+++ b/DesktopApp/nbproject/project.properties
@@ -69,11 +69,18 @@ file.reference.jfoenix-8.0.10.jar=C:\\Users\\wassi\\Downloads\\librairies\\jfoen
 
 file.reference.mysql-connector-java-5.1.23.jar=..\\..\\..\\Downloads\\jar_files\\mysql-connector-java-5.1.23.jar
 
+file.reference.poi-3.17.jar=C:\\Users\\wassi\\Downloads\\librairies\\poi-3.17.jar
+file.reference.slf4j.jar=C:\\Users\\wassi\\Downloads\\librairies\\slf4j.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
-
+    ${file.reference.ini4j-0.5.1.jar}:\
+    ${file.reference.jBCrypt-0.4-sources.jar-2}:\
+    ${file.reference.jBCrypt-0.4.jar-2}:\
+    ${file.reference.jfoenix-8.0.10.jar}:\
+    ${file.reference.poi-3.17.jar}:\
+    ${file.reference.slf4j.jar}
     ${file.reference.jBCrypt-0.4-sources.jar-2}:\
     ${file.reference.jBCrypt-0.4.jar-2}:\
     ${file.reference.javax.mail-1.6.2.jar-1}:\
