--- a/DesktopApp/nbproject/private/private.properties
+++ b/DesktopApp/nbproject/private/private.properties
@@ -5,8 +5,12 @@ do.depend=false
 do.jar=true
 
 file.reference.controlsfx-8.40.14.jar=C:\\Users\\Gaaloul\\Downloads\\controlsfx-8.40.14.jar
+file.reference.controlsfx-8.40.14.jar-2=D:\\PIDEV\\Java jar files\\controlsfx-8.40.14.jar
 file.reference.itextpdf-5.5.8.jar=C:\\Users\\Gaaloul\\Downloads\\itextpdf-5.5.8.jar
 
+file.reference.itextpdf-5.5.8.jar-3=D:\\PIDEV\\Java jar files\\itextpdf-5.5.8.jar
+file.reference.javax.mail-1.6.2.jar-1=D:\\PIDEV\\Java jar files\\javax.mail-1.6.2.jar
+file.reference.jBCrypt-0.4-sources.jar-2=D:\\PIDEV\\Java jar files\\jBCrypt-0.4-sources.jar
 javac.debug=true
 javadoc.preview=true
 
