--- a/DesktopApp/nbproject/project.properties
+++ b/DesktopApp/nbproject/project.properties
@@ -67,6 +67,7 @@ file.reference.jBCrypt-0.4-sources.jar-2=C:\\Users\\admin\\Downloads\\jBCrypt-0.
 file.reference.jBCrypt-0.4-sources.jar-2=C:\\Users\\wassi\\Downloads\\librairies\\jBCrypt-0.4-sources.jar
 
 file.reference.jBCrypt-0.4-sources.jar-3=C:\\Users\\admin\\Downloads\\jBCrypt-0.4-sources.jar
+file.reference.jBCrypt-0.4-sources.jar-4=C:\\Users\\wassi\\Downloads\\librairies\\jBCrypt-0.4-sources.jar
 file.reference.jBCrypt-0.4.jar=C:\\Users\\wassi\\Downloads\\jBCrypt-0.4.jar
 file.reference.jBCrypt-0.4.jar-1=C:\\Users\\admin\\Downloads\\jBCrypt-0.4.jar
 
@@ -102,7 +103,12 @@ includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
-
+    ${file.reference.ini4j-0.5.1.jar}:\
+    ${file.reference.jBCrypt-0.4-sources.jar-4}:\
+    ${file.reference.jBCrypt-0.4.jar-2}:\
+    ${file.reference.jfoenix-8.0.10.jar}:\
+    ${file.reference.poi-3.17.jar}:\
+    ${file.reference.slf4j.jar}
     ${file.reference.itextpdf-5.5.8.jar}:\
     ${file.reference.controlsfx-8.40.14.jar}:\
     ${file.reference.core-2.0.jar}:\
