--- a/DesktopApp/nbproject/private/private.properties
+++ b/DesktopApp/nbproject/private/private.properties
@@ -6,5 +6,5 @@ do.jar=true
 javac.debug=true
 javadoc.preview=true
 
-user.properties.file=C:\\Users\\admin\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=/Users/abdelazizlahmar/Library/Application Support/NetBeans/8.2/build.properties
 
