--- a/DesktopApp/nbproject/private/private.properties
+++ b/DesktopApp/nbproject/private/private.properties
@@ -19,7 +19,7 @@ javadoc.preview=true
 
 
 
-user.properties.file=C:\\Users\\wassi\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=/Users/abdelazizlahmar/Library/Application Support/NetBeans/8.2/build.properties
 
 
 
