--- a/DesktopApp/nbproject/project.properties
+++ b/DesktopApp/nbproject/project.properties
@@ -37,18 +37,27 @@ excludes=
 file.reference.controlsfx-8.40.14.jar-2=C:\\Users\\SADOK\\Downloads\\controlsfx-8.40.14.jar
 file.reference.controlsfx-8.40.14.jar-3=D:\\PIDEV\\Java jar files\\controlsfx-8.40.14.jar
 file.reference.core-2.0.jar=C:\\Users\\SADOK\\Downloads\\core-2.0.jar
+file.reference.core-2.0.jar-1=D:\\PIDEV\\Java jar files\\core-2.0.jar
 file.reference.core-3.1.0.jar=C:\\Users\\SADOK\\Downloads\\core-3.1.0.jar
+file.reference.core-3.1.0.jar-1=D:\\PIDEV\\Java jar files\\core-3.1.0.jar
 file.reference.core-3.5.1.jar=C:\\Users\\SADOK\\Downloads\\jar_files (1)\\core-3.5.1.jar
 
+file.reference.core-3.5.1.jar-1=D:\\PIDEV\\Java jar files\\core-3.5.1.jar
 file.reference.fontawesomefx-8.9.jar=C:\\Users\\SADOK\\Downloads\\jar_files (2)\\fontawesomefx-8.9.jar
 
+file.reference.fontawesomefx-8.9.jar-1=D:\\PIDEV\\Java jar files\\fontawesomefx-8.9.jar
 file.reference.ini4j-0.5.1.jar=C:\\Users\\wassi\\Downloads\\librairies\\ini4j-0.5.1.jar
 
+file.reference.ini4j-0.5.1.jar-1=D:\\PIDEV\\Java jar files\\librairies\\librairies\\ini4j-0.5.1.jar
+file.reference.ini4j-0.5.1.jar-2=C:\\Users\\SADOK\\Downloads\\librairies\\librairies\\ini4j-0.5.1.jar
+file.reference.ini4j-0.5.1.jar-3=D:\\PIDEV\\Java jar files\\ini4j-0.5.1.jar
 file.reference.itextpdf-5.5.8.jar=C:\\Users\\admin\\Downloads\\jar_files\\itextpdf-5.5.8.jar
 file.reference.itextpdf-5.5.8.jar-3=C:\\Users\\SADOK\\Downloads\\itextpdf-5.5.8.jar
 file.reference.itextpdf-5.5.8.jar-4=D:\\PIDEV\\Java jar files\\itextpdf-5.5.8.jar
 file.reference.javase-2.0.jar=C:\\Users\\SADOK\\Downloads\\javase-2.0.jar
+file.reference.javase-2.0.jar-1=D:\\PIDEV\\Java jar files\\javase-2.0.jar
 file.reference.javase-3.1.0.jar=C:\\Users\\SADOK\\Downloads\\javase-3.1.0.jar
+file.reference.javase-3.1.0.jar-1=D:\\PIDEV\\Java jar files\\javase-3.1.0.jar
 file.reference.javax.mail-1.6.2.jar=C:\\Users\\SADOK\\Downloads\\javax.mail-1.6.2.jar
 file.reference.controlsfx-8.40.14.jar=C:\\Users\\admin\\Downloads\\jar_files (1)\\controlsfx-8.40.14.jar
 file.reference.controlsfx-8.40.14.jar-1=..\\..\\..\\Downloads\\controlsfx-8.40.14.jar
@@ -69,15 +78,19 @@ file.reference.jBCrypt-0.4.jar-1=C:\\Users\\admin\\Downloads\\jBCrypt-0.4.jar
 
 file.reference.itextpdf-5.5.8.jar-2=..\\..\\..\\Downloads\\itextpdf-5.5.8.jar
 file.reference.javax.mail-1.6.2.jar=..\\..\\..\\Downloads\\javax.mail-1.6.2.jar
-file.reference.javax.mail-1.6.2.jar-1=C:\\Users\\SADOK\\Downloads\\javax.mail-1.6.2.jar
+file.reference.javax.mail-1.6.2.jar-1=D:\\PIDEV\\Java jar files\\javax.mail-1.6.2.jar
 file.reference.javax.mail-1.6.2.jar-2=D:\\PIDEV\\Java jar files\\javax.mail-1.6.2.jar
 file.reference.jBCrypt-0.4-sources.jar=C:\\Users\\wassi\\Downloads\\jBCrypt-0.4-sources.jar
 file.reference.jBCrypt-0.4-sources.jar-1=..\\..\\..\\Downloads\\jBCrypt-0.4-sources.jar
-file.reference.jBCrypt-0.4-sources.jar-2=C:\\Users\\SADOK\\Downloads\\jBCrypt-0.4-sources.jar
+file.reference.jBCrypt-0.4-sources.jar-2=D:\\PIDEV\\Java jar files\\jBCrypt-0.4-sources.jar
 file.reference.jBCrypt-0.4-sources.jar-3=D:\\PIDEV\\Java jar files\\jBCrypt-0.4-sources.jar
 file.reference.jBCrypt-0.4.jar=C:\\Users\\wassi\\Downloads\\jBCrypt-0.4.jar
 file.reference.jBCrypt-0.4.jar-1=..\\..\\..\\Downloads\\jBCrypt-0.4.jar
 
+file.reference.jBCrypt-0.4.jar-3=D:\\PIDEV\\Java jar files\\jBCrypt-0.4.jar
+file.reference.jfoenix-8.0.10.jar-1=D:\\PIDEV\\Java jar files\\librairies\\librairies\\jfoenix-8.0.10.jar
+file.reference.jfoenix-8.0.10.jar-2=C:\\Users\\SADOK\\Downloads\\librairies\\librairies\\jfoenix-8.0.10.jar
+file.reference.jfoenix-8.0.10.jar-3=D:\\PIDEV\\Java jar files\\jfoenix-8.0.10.jar
 file.reference.jfreesvg-2.1.jar=C:\\Users\\SADOK\\Downloads\\jfreesvg-2.1.jar
 
 
@@ -87,10 +100,16 @@ file.reference.jBCrypt-0.4.jar-2=C:\\Users\\wassi\\Downloads\\librairies\\jBCryp
 file.reference.jfoenix-8.0.10.jar=C:\\Users\\wassi\\Downloads\\librairies\\jfoenix-8.0.10.jar
 
 
+file.reference.jfreesvg-2.1.jar-1=D:\\PIDEV\\Java jar files\\jfreesvg-2.1.jar
 file.reference.mysql-connector-java-5.1.23.jar=..\\..\\..\\Downloads\\jar_files\\mysql-connector-java-5.1.23.jar
 
 file.reference.poi-3.17.jar=C:\\Users\\wassi\\Downloads\\librairies\\poi-3.17.jar
+file.reference.poi-3.17.jar-1=D:\\PIDEV\\Java jar files\\librairies\\librairies\\poi-3.17.jar
+file.reference.poi-3.17.jar-2=C:\\Users\\SADOK\\Downloads\\librairies\\librairies\\poi-3.17.jar
+file.reference.poi-3.17.jar-3=D:\\PIDEV\\Java jar files\\poi-3.17.jar
 file.reference.slf4j.jar=C:\\Users\\wassi\\Downloads\\librairies\\slf4j.jar
+file.reference.slf4j.jar-1=D:\\PIDEV\\Java jar files\\librairies\\librairies\\slf4j.jar
+file.reference.slf4j.jar-2=D:\\PIDEV\\Java jar files\\slf4j.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -99,17 +118,36 @@ javac.classpath=\
     ${file.reference.javase-2.0.jar}:\
     ${file.reference.javase-3.1.0.jar}:\
     ${file.reference.jfreesvg-2.1.jar}:\
-    ${file.reference.fontawesomefx-8.9.jar}\
-    ${file.reference.poi-3.17.jar}:\
-    ${file.reference.slf4j.jar}\
-    ${file.reference.ini4j-0.5.1.jar}:\
-    ${file.reference.jfoenix-8.0.10.jar}\
-    ${file.reference.controlsfx-8.40.14.jar}:\
+    ${file.reference.fontawesomefx-8.9.jar}${file.reference.poi-3.17.jar}:\
+    ${file.reference.slf4j.jar}${file.reference.ini4j-0.5.1.jar}:\
+    ${file.reference.jfoenix-8.0.10.jar}${file.reference.controlsfx-8.40.14.jar}:\
     ${file.reference.itextpdf-5.5.8.jar}:\
     ${file.reference.mysql-connector-java-5.1.23.jar}:\
-    ${file.reference.javax.mail-1.6.2.jar}\
-    ${file.reference.jBCrypt-0.4-sources.jar}:\
-    ${file.reference.jBCrypt-0.4.jar}
+    ${file.reference.javax.mail-1.6.2.jar}${file.reference.jBCrypt-0.4-sources.jar}:\
+    ${file.reference.jBCrypt-0.4.jar}:\
+    ${file.reference.controlsfx-8.40.14.jar-3}:\
+    ${file.reference.fontawesomefx-8.9.jar-1}:\
+    ${file.reference.itextpdf-5.5.8.jar-4}:\
+    ${file.reference.jBCrypt-0.4-sources.jar-2}:\
+    ${file.reference.jBCrypt-0.4.jar-3}:\
+    ${file.reference.javax.mail-1.6.2.jar-1}:\
+    ${file.reference.core-2.0.jar-1}:\
+    ${file.reference.core-3.5.1.jar-1}:\
+    ${file.reference.core-3.1.0.jar-1}:\
+    ${file.reference.javase-2.0.jar-1}:\
+    ${file.reference.javase-3.1.0.jar-1}:\
+    ${file.reference.jfreesvg-2.1.jar-1}:\
+    ${file.reference.jfoenix-8.0.10.jar-1}:\
+    ${file.reference.ini4j-0.5.1.jar-1}:\
+    ${file.reference.poi-3.17.jar-1}:\
+    ${file.reference.slf4j.jar-1}:\
+    ${file.reference.poi-3.17.jar-2}:\
+    ${file.reference.ini4j-0.5.1.jar-2}:\
+    ${file.reference.jfoenix-8.0.10.jar-2}:\
+    ${file.reference.ini4j-0.5.1.jar-3}:\
+    ${file.reference.jfoenix-8.0.10.jar-3}:\
+    ${file.reference.poi-3.17.jar-3}:\
+    ${file.reference.slf4j.jar-2}
 
 
 # Space-separated list of extra javac options
