ajout des icons + modifection interf

--- a/DesktopApp/nbproject/private/private.properties
+++ b/DesktopApp/nbproject/private/private.properties
@@ -3,6 +3,7 @@ compile.on.save=true
 
 do.depend=false
 do.jar=true
+file.reference.itextpdf-5.5.8.jar=C:\\Users\\Saleh\\Downloads\\jar_files\\itextpdf-5.5.8.jar
 javac.debug=true
 javadoc.preview=true
 
