--- a/DesktopApp/nbproject/project.properties
+++ b/DesktopApp/nbproject/project.properties
@@ -34,6 +34,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.itextpdf-5.5.8.jar=C:\\Users\\admin\\Downloads\\jar_files\\itextpdf-5.5.8.jar
+file.reference.itextpdf-5.5.8.jar-1=C:\\Users\\Saleh\\Downloads\\jar_files\\itextpdf-5.5.8.jar
 includes=**
 jar.compress=false
 javac.classpath=\
