some fixing in data recuperation and interface

--- a/DesktopApp/src/LoginData.ini
+++ b/DesktopApp/src/LoginData.ini
@@ -1,4 +1,9 @@
 [Login data]
+id = 0
+Nom = wassim
+Prénom = hachani
 Email = wassimhachaniya@gmail.fr
 Password = wassim123A
+Numéro Téléphone = 54100070
+Role = Client
 
