--- a/DesktopApp/nbproject/project.properties
+++ b/DesktopApp/nbproject/project.properties
@@ -80,6 +80,7 @@ file.reference.itextpdf-5.5.8.jar-1=C:\\Users\\wassi\\Downloads\\jar_files\\itex
 file.reference.javax.mail-1.6.2.jar=C:\\Users\\admin\\Downloads\\javax.mail-1.6.2.jar
 file.reference.javax.mail-1.6.2.jar-1=C:\\Users\\admin\\Downloads\\javax.mail-1.6.2.jar
 file.reference.javax.mail-1.6.2.jar-3=C:\\Users\\Saleh\\Desktop\\library maktabti\\javax.mail-1.6.2.jar
+file.reference.javax.mail-1.6.2.jar-5=C:\\Users\\wassi\\Downloads\\librairies\\javax.mail-1.6.2.jar
 file.reference.jBCrypt-0.4-sources.jar=C:\\Users\\wassi\\Downloads\\jBCrypt-0.4-sources.jar
 file.reference.jBCrypt-0.4-sources.jar-1=C:\\Users\\admin\\Downloads\\jBCrypt-0.4-sources.jar
 
@@ -90,6 +91,7 @@ file.reference.jBCrypt-0.4-sources.jar-2=C:\\Users\\wassi\\Downloads\\librairies
 
 file.reference.jBCrypt-0.4-sources.jar-4=C:\\Users\\Saleh\\Desktop\\library maktabti\\jBCrypt-0.4-sources.jar
 
+file.reference.jBCrypt-0.4-sources.jar-6=C:\\Users\\wassi\\Downloads\\librairies\\jBCrypt-0.4-sources.jar
 file.reference.jBCrypt-0.4.jar=C:\\Users\\wassi\\Downloads\\jBCrypt-0.4.jar
 file.reference.jBCrypt-0.4.jar-1=C:\\Users\\admin\\Downloads\\jBCrypt-0.4.jar
 
@@ -358,8 +360,14 @@ javac.classpath=\
     ${file.reference.poi-3.17.jar-2}:\
     ${file.reference.slf4j.jar-2}:\
     ${file.reference.core-3.1.0.jar-1}:\
-    ${file.reference.core-3.5.1.jar-1}\
-    ${file.reference.mysql-connector-java-5.1.23.jar}:
+    ${file.reference.core-3.5.1.jar-1}${file.reference.mysql-connector-java-5.1.23.jar}:\
+    ${file.reference.ini4j-0.5.1.jar}:\
+    ${file.reference.jBCrypt-0.4-sources.jar-6}:\
+    ${file.reference.jBCrypt-0.4.jar-2}:\
+    ${file.reference.javax.mail-1.6.2.jar-5}:\
+    ${file.reference.jfoenix-8.0.10.jar}:\
+    ${file.reference.poi-3.17.jar}:\
+    ${file.reference.slf4j.jar}
 
 
 
