Returning Username on interface done

--- a/DesktopApp/nbproject/project.properties
+++ b/DesktopApp/nbproject/project.properties
@@ -52,6 +52,7 @@ file.reference.fontawesomefx-8.9.jar=C:\\Users\\SADOK\\Downloads\\jar_files (2)\
 
 file.reference.fontawesomefx-8.9.jar-1=D:\\PIDEV\\Java jar files\\fontawesomefx-8.9.jar
 file.reference.fontawesomefx-8.9.jar-3=C:\\Users\\Saleh\\Desktop\\library maktabti\\fontawesomefx-8.9.jar
+file.reference.fontawesomefx-8.9.jar-4=C:\\Users\\wassi\\Downloads\\librairies\\fontawesomefx-8.9.jar
 file.reference.ini4j-0.5.1.jar=C:\\Users\\wassi\\Downloads\\librairies\\ini4j-0.5.1.jar
 
 file.reference.ini4j-0.5.1.jar-1=D:\\PIDEV\\Java jar files\\librairies\\librairies\\ini4j-0.5.1.jar
@@ -367,7 +368,8 @@ javac.classpath=\
     ${file.reference.javax.mail-1.6.2.jar-5}:\
     ${file.reference.jfoenix-8.0.10.jar}:\
     ${file.reference.poi-3.17.jar}:\
-    ${file.reference.slf4j.jar}
+    ${file.reference.slf4j.jar}:\
+    ${file.reference.fontawesomefx-8.9.jar-4}
 
 
 
