--- a/DesktopApp/src/edu/esprit/data/LoginData.ini
+++ b/DesktopApp/src/edu/esprit/data/LoginData.ini
@@ -1,9 +1,4 @@
 [Login data]
-id = 0
-Nom = wassim
-Prénom = hachani
-Email = wassimhachani@hmail.fr
+Email = wassimhachani@gmail.com
 Password = wassim123A
-Numéro Téléphone = 54100060
-Role = Auteur
 
