verification user connecté role

--- a/DesktopApp/nbproject/project.properties
+++ b/DesktopApp/nbproject/project.properties
@@ -283,7 +283,7 @@ excludes=
 
 file.reference.controlsfx-8.40.14.jar-2=C:\\Users\\SADOK\\Downloads\\controlsfx-8.40.14.jar
 file.reference.controlsfx-8.40.14.jar-3=D:\\PIDEV\\Java jar files\\controlsfx-8.40.14.jar
-file.reference.controlsfx-8.40.14.jar-4=C:\\Users\\admin\\Downloads\\jar_files (1)\\controlsfx-8.40.14.jar
+file.reference.controlsfx-8.40.14.jar-4=C:\\Users\\admin\\Downloads\\jarfiles desktop app maktabti\\controlsfx-8.40.14.jar
 file.reference.core-2.0.jar=C:\\Users\\SADOK\\Downloads\\core-2.0.jar
 file.reference.core-2.0.jar-2=C:\\Users\\admin\\Downloads\\jarfiles desktop app maktabti\\core-2.0.jar
 file.reference.core-3.1.0.jar=C:\\Users\\SADOK\\Downloads\\core-3.1.0.jar
@@ -296,7 +296,7 @@ file.reference.fontawesomefx-8.9.jar=C:\\Users\\SADOK\\Downloads\\jar_files (2)\
 file.reference.fontawesomefx-8.9.jar-2=C:\\Users\\admin\\Downloads\\jarfiles desktop app maktabti\\fontawesomefx-8.9.jar
 file.reference.ini4j-0.5.1.jar=C:\\Users\\wassi\\Downloads\\librairies\\ini4j-0.5.1.jar
 
-file.reference.ini4j-0.5.1.jar-1=C:\\Users\\admin\\Downloads\\ini4j-0.5.1.jar
+file.reference.ini4j-0.5.1.jar-1=C:\\Users\\admin\\Downloads\\jarfiles desktop app maktabti\\ini4j-0.5.1.jar
 
 file.reference.itextpdf-5.5.8.jar=C:\\Users\\admin\\Downloads\\jar_files\\itextpdf-5.5.8.jar
 file.reference.itextpdf-5.5.8.jar-3=C:\\Users\\SADOK\\Downloads\\itextpdf-5.5.8.jar
@@ -308,7 +308,7 @@ file.reference.javase-3.1.0.jar-2=C:\\Users\\admin\\Downloads\\jarfiles desktop 
 file.reference.javax.mail-1.6.2.jar=C:\\Users\\SADOK\\Downloads\\javax.mail-1.6.2.jar
 file.reference.controlsfx-8.40.14.jar=C:\\Users\\admin\\Downloads\\jar_files (1)\\controlsfx-8.40.14.jar
 file.reference.controlsfx-8.40.14.jar-1=..\\..\\..\\Downloads\\controlsfx-8.40.14.jar
-file.reference.itextpdf-5.5.8.jar=C:\\Users\\admin\\Downloads\\jar_files\\itextpdf-5.5.8.jar
+file.reference.itextpdf-5.5.8.jar=C:\\Users\\admin\\Downloads\\jarfiles desktop app maktabti\\itextpdf-5.5.8.jar
 file.reference.itextpdf-5.5.8.jar-1=C:\\Users\\wassi\\Downloads\\jar_files\\itextpdf-5.5.8.jar
 
 file.reference.javax.mail-1.6.2.jar=C:\\Users\\admin\\Downloads\\javax.mail-1.6.2.jar
@@ -352,7 +352,7 @@ file.reference.jfoenix-8.0.10.jar=C:\\Users\\wassi\\Downloads\\librairies\\jfoen
 
 
 
-file.reference.jfreesvg-2.1.jar-1=C:\\Users\\admin\\Downloads\\jar_files (2)\\jfreesvg-2.1.jar
+file.reference.jfreesvg-2.1.jar-1=C:\\Users\\admin\\Downloads\\jarfiles desktop app maktabti\\jfreesvg-2.1.jar
 file.reference.mysql-connector-java-5.1.23.jar=..\\..\\..\\Downloads\\jar_files\\mysql-connector-java-5.1.23.jar
 
 file.reference.poi-3.17.jar=C:\\Users\\wassi\\Downloads\\librairies\\poi-3.17.jar
@@ -363,7 +363,22 @@ includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
-
+    ${file.reference.controlsfx-8.40.14.jar-4}:\
+    ${file.reference.core-2.0.jar-2}:\
+    ${file.reference.core-3.1.0.jar-1}:\
+    ${file.reference.core-3.5.1.jar-1}:\
+    ${file.reference.fontawesomefx-8.9.jar-2}:\
+    ${file.reference.ini4j-0.5.1.jar-1}:\
+    ${file.reference.itextpdf-5.5.8.jar}:\
+    ${file.reference.jBCrypt-0.4-sources.jar-5}:\
+    ${file.reference.jBCrypt-0.4.jar-4}:\
+    ${file.reference.javase-2.0.jar-2}:\
+    ${file.reference.javase-3.1.0.jar-2}:\
+    ${file.reference.javax.mail-1.6.2.jar-4}:\
+    ${file.reference.jfoenix-8.0.10.jar-2}:\
+    ${file.reference.jfreesvg-2.1.jar-1}:\
+    ${file.reference.poi-3.17.jar-2}:\
+    ${file.reference.slf4j.jar-2}
     ${file.reference.controlsfx-8.40.14.jar-3}:\
     ${file.reference.core-2.0.jar-1}:\
     ${file.reference.core-3.1.0.jar-2}:\
