--- a/DesktopApp/nbproject/project.properties
+++ b/DesktopApp/nbproject/project.properties
@@ -378,7 +378,14 @@ javac.classpath=\
     ${file.reference.jfoenix-8.0.10.jar-2}:\
     ${file.reference.jfreesvg-2.1.jar-1}:\
     ${file.reference.poi-3.17.jar-2}:\
-    ${file.reference.slf4j.jar-2}
+    ${file.reference.slf4j.jar-2}:\
+    ${file.reference.ini4j-0.5.1.jar}:\
+    ${file.reference.jBCrypt-0.4-sources.jar-6}:\
+    ${file.reference.jBCrypt-0.4.jar-2}:\
+    ${file.reference.javax.mail-1.6.2.jar-5}:\
+    ${file.reference.jfoenix-8.0.10.jar}:\
+    ${file.reference.poi-3.17.jar}:\
+    ${file.reference.slf4j.jar}
     ${file.reference.controlsfx-8.40.14.jar-3}:\
     ${file.reference.core-2.0.jar-1}:\
     ${file.reference.core-3.1.0.jar-2}:\
