--- a/DesktopApp/nbproject/private/private.properties
+++ b/DesktopApp/nbproject/private/private.properties
@@ -20,7 +20,7 @@ javadoc.preview=true
 
 user.properties.file=C:\\Users\\SADOK\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
 user.properties.file=C:\\Users\\SADOK\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
-user.properties.file=C:\\Users\\admin\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\Ilef\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
 
 
 
