--- a/DesktopApp/nbproject/project.properties
+++ b/DesktopApp/nbproject/project.properties
@@ -35,6 +35,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 
+file.reference.commons-io-2.11.0.jar=../../../../Desktop/commons-io-2.11.0/commons-io-2.11.0.jar
 file.reference.controlsfx-8.40.14.jar-2=C:\\Users\\SADOK\\Downloads\\controlsfx-8.40.14.jar
 file.reference.controlsfx-8.40.14.jar-3=D:\\PIDEV\\Java jar files\\controlsfx-8.40.14.jar
 file.reference.controlsfx-8.40.14.jar-5=C:\\Users\\Saleh\\Desktop\\library maktabti\\controlsfx-8.40.14.jar
@@ -378,7 +379,8 @@ javac.classpath=\
     ${file.reference.jfoenix-8.0.10.jar-2}:\
     ${file.reference.jfreesvg-2.1.jar-1}:\
     ${file.reference.poi-3.17.jar-2}:\
-    ${file.reference.slf4j.jar-2}
+    ${file.reference.slf4j.jar-2}:\
+    ${file.reference.commons-io-2.11.0.jar}
     ${file.reference.controlsfx-8.40.14.jar-3}:\
     ${file.reference.core-2.0.jar-1}:\
     ${file.reference.core-3.1.0.jar-2}:\
