stat and interface categorie

--- a/DesktopApp/nbproject/project.properties
+++ b/DesktopApp/nbproject/project.properties
@@ -61,6 +61,7 @@ file.reference.fontawesomefx-8.9.jar=C:\\Users\\SADOK\\Downloads\\jar_files (2)\
 file.reference.fontawesomefx-8.9.jar-1=D:\\PIDEV\\Java jar files\\fontawesomefx-8.9.jar
 file.reference.fontawesomefx-8.9.jar-3=C:\\Users\\Saleh\\Desktop\\library maktabti\\fontawesomefx-8.9.jar
 file.reference.fontawesomefx-8.9.jar-4=C:\\Users\\wassi\\Downloads\\librairies\\fontawesomefx-8.9.jar
+file.reference.fontawesomefx-8.9.jar-5=C:\\Users\\Saleh\\Downloads\\fontawesomefx-8.9.jar
 file.reference.ini4j-0.5.1.jar=C:\\Users\\wassi\\Downloads\\librairies\\ini4j-0.5.1.jar
 
 file.reference.ini4j-0.5.1.jar-1=D:\\PIDEV\\Java jar files\\librairies\\librairies\\ini4j-0.5.1.jar
@@ -363,7 +364,23 @@ includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
-
+    ${file.reference.controlsfx-8.40.14.jar-5}:\
+    ${file.reference.core-2.0.jar-3}:\
+    ${file.reference.core-3.1.0.jar-2}:\
+    ${file.reference.core-3.5.1.jar-2}:\
+    ${file.reference.fontawesomefx-8.9.jar-3}:\
+    ${file.reference.ini4j-0.5.1.jar-4}:\
+    ${file.reference.itextpdf-5.5.8.jar-5}:\
+    ${file.reference.jBCrypt-0.4-sources.jar-4}:\
+    ${file.reference.jBCrypt-0.4.jar-5}:\
+    ${file.reference.javase-2.0.jar-3}:\
+    ${file.reference.javase-3.1.0.jar-3}:\
+    ${file.reference.javax.mail-1.6.2.jar-3}:\
+    ${file.reference.jfoenix-8.0.10.jar-4}:\
+    ${file.reference.jfreesvg-2.1.jar-2}:\
+    ${file.reference.poi-3.17.jar-4}:\
+    ${file.reference.slf4j.jar-3}:\
+    ${file.reference.fontawesomefx-8.9.jar-5}
     ${file.reference.controlsfx-8.40.14.jar-3}:\
     ${file.reference.core-2.0.jar-1}:\
     ${file.reference.core-3.1.0.jar-2}:\
