update css for the dashboard

--- a/DesktopApp/nbproject/project.properties
+++ b/DesktopApp/nbproject/project.properties
@@ -45,6 +45,7 @@ file.reference.core-3.1.0.jar=C:\\Users\\SADOK\\Downloads\\core-3.1.0.jar
 file.reference.core-3.1.0.jar-1=D:\\PIDEV\\Java jar files\\core-3.1.0.jar
 
 file.reference.core-3.1.0.jar-2=D:\\PIDEV\\Java jar files\\core-3.1.0.jar
+file.reference.core-3.1.0.jar-3=D:\\PIDEV\\Java jar files\\core-3.1.0.jar
 file.reference.core-3.5.1.jar=C:\\Users\\SADOK\\Downloads\\jar_files (1)\\core-3.5.1.jar
 
 file.reference.core-3.5.1.jar-1=D:\\PIDEV\\Java jar files\\core-3.5.1.jar
@@ -56,6 +57,7 @@ file.reference.core-3.5.1.jar=C:\\Users\\SADOK\\Downloads\\jar_files (1)\\core-3
 file.reference.core-3.5.1.jar-1=D:\\PIDEV\\Java jar files\\core-3.5.1.jar
 file.reference.core-3.5.1.jar-2=C:\\Users\\Saleh\\Desktop\\library maktabti\\core-3.5.1.jar
 
+file.reference.core-3.5.1.jar-3=D:\\PIDEV\\Java jar files\\core-3.5.1.jar
 file.reference.fontawesomefx-8.9.jar=C:\\Users\\SADOK\\Downloads\\jar_files (2)\\fontawesomefx-8.9.jar
 
 file.reference.fontawesomefx-8.9.jar-1=D:\\PIDEV\\Java jar files\\fontawesomefx-8.9.jar
@@ -133,6 +135,7 @@ file.reference.jfoenix-8.0.10.jar=C:\\Users\\wassi\\Downloads\\librairies\\jfoen
 file.reference.jfreesvg-2.1.jar-1=D:\\PIDEV\\Java jar files\\jfreesvg-2.1.jar
 
 file.reference.jfreesvg-2.1.jar-2=D:\\PIDEV\\Java jar files\\jfreesvg-2.1.jar
+file.reference.jfreesvg-2.1.jar-3=D:\\PIDEV\\Java jar files\\jfreesvg-2.1.jar
 file.reference.mapbox-sdk-services-3.1.0.jar=C:\\Users\\SADOK\\Downloads\\mapbox-sdk-services-3.1.0.jar
 
 file.reference.jfreesvg-2.1.jar-2=C:\\Users\\Saleh\\Desktop\\library maktabti\\jfreesvg-2.1.jar
@@ -152,6 +155,7 @@ file.reference.slf4j.jar-3=D:\\PIDEV\\Java jar files\\slf4j.jar
 
 file.reference.slf4j.jar-3=C:\\Users\\Saleh\\Desktop\\library maktabti\\slf4j.jar
 
+file.reference.slf4j.jar-4=D:\\PIDEV\\Java jar files\\slf4j.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -363,7 +367,22 @@ includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
-
+    ${file.reference.controlsfx-8.40.14.jar-3}:\
+    ${file.reference.core-2.0.jar-1}:\
+    ${file.reference.core-3.1.0.jar-3}:\
+    ${file.reference.core-3.5.1.jar-3}:\
+    ${file.reference.fontawesomefx-8.9.jar-1}:\
+    ${file.reference.ini4j-0.5.1.jar-3}:\
+    ${file.reference.itextpdf-5.5.8.jar-4}:\
+    ${file.reference.jBCrypt-0.4-sources.jar-2}:\
+    ${file.reference.jBCrypt-0.4.jar-3}:\
+    ${file.reference.javase-2.0.jar-1}:\
+    ${file.reference.javase-3.1.0.jar-1}:\
+    ${file.reference.javax.mail-1.6.2.jar-1}:\
+    ${file.reference.jfoenix-8.0.10.jar-3}:\
+    ${file.reference.jfreesvg-2.1.jar-3}:\
+    ${file.reference.poi-3.17.jar-3}:\
+    ${file.reference.slf4j.jar-4}
     ${file.reference.controlsfx-8.40.14.jar-3}:\
     ${file.reference.core-2.0.jar-1}:\
     ${file.reference.core-3.1.0.jar-2}:\
