--- a/DesktopApp/nbproject/project.properties
+++ b/DesktopApp/nbproject/project.properties
@@ -37,26 +37,35 @@ excludes=
 file.reference.controlsfx-8.40.14.jar-2=C:\\Users\\SADOK\\Downloads\\controlsfx-8.40.14.jar
 file.reference.controlsfx-8.40.14.jar-3=D:\\PIDEV\\Java jar files\\controlsfx-8.40.14.jar
 file.reference.controlsfx-8.40.14.jar-4=C:\\Users\\admin\\Downloads\\jar_files (1)\\controlsfx-8.40.14.jar
+file.reference.controlsfx-8.40.14.jar-5=/Users/abdelazizlahmar/Desktop/Maktabti Libraries/Desktop/controlsfx-8.40.14.jar
 file.reference.core-2.0.jar=C:\\Users\\SADOK\\Downloads\\core-2.0.jar
+file.reference.core-2.0.jar-1=/Users/abdelazizlahmar/Desktop/Maktabti Libraries/Desktop/core-2.0.jar
 file.reference.core-2.0.jar-2=C:\\Users\\admin\\Downloads\\jarfiles desktop app maktabti\\core-2.0.jar
 file.reference.core-3.1.0.jar=C:\\Users\\SADOK\\Downloads\\core-3.1.0.jar
 file.reference.core-3.1.0.jar-1=C:\\Users\\admin\\Downloads\\jarfiles desktop app maktabti\\core-3.1.0.jar
+file.reference.core-3.1.0.jar-2=/Users/abdelazizlahmar/Desktop/Maktabti Libraries/Desktop/core-3.1.0.jar
 file.reference.core-3.5.1.jar=C:\\Users\\SADOK\\Downloads\\jar_files (1)\\core-3.5.1.jar
 
 file.reference.core-3.5.1.jar-1=C:\\Users\\admin\\Downloads\\jarfiles desktop app maktabti\\core-3.5.1.jar
+file.reference.core-3.5.1.jar-2=/Users/abdelazizlahmar/Desktop/Maktabti Libraries/Desktop/core-3.5.1.jar
 file.reference.fontawesomefx-8.9.jar=C:\\Users\\SADOK\\Downloads\\jar_files (2)\\fontawesomefx-8.9.jar
 
+file.reference.fontawesomefx-8.9.jar-1=/Users/abdelazizlahmar/Desktop/Maktabti Libraries/Desktop/fontawesomefx-8.9.jar
 file.reference.fontawesomefx-8.9.jar-2=C:\\Users\\admin\\Downloads\\jarfiles desktop app maktabti\\fontawesomefx-8.9.jar
 file.reference.ini4j-0.5.1.jar=C:\\Users\\wassi\\Downloads\\librairies\\ini4j-0.5.1.jar
 
 file.reference.ini4j-0.5.1.jar-1=C:\\Users\\admin\\Downloads\\ini4j-0.5.1.jar
 
+file.reference.ini4j-0.5.1.jar-2=/Users/abdelazizlahmar/Desktop/Maktabti Libraries/Desktop/ini4j-0.5.1.jar
 file.reference.itextpdf-5.5.8.jar=C:\\Users\\admin\\Downloads\\jar_files\\itextpdf-5.5.8.jar
 file.reference.itextpdf-5.5.8.jar-3=C:\\Users\\SADOK\\Downloads\\itextpdf-5.5.8.jar
 file.reference.itextpdf-5.5.8.jar-4=D:\\PIDEV\\Java jar files\\itextpdf-5.5.8.jar
+file.reference.itextpdf-5.5.8.jar-5=/Users/abdelazizlahmar/Desktop/Maktabti Libraries/Desktop/itextpdf-5.5.8.jar
 file.reference.javase-2.0.jar=C:\\Users\\SADOK\\Downloads\\javase-2.0.jar
+file.reference.javase-2.0.jar-1=/Users/abdelazizlahmar/Desktop/Maktabti Libraries/Desktop/javase-2.0.jar
 file.reference.javase-2.0.jar-2=C:\\Users\\admin\\Downloads\\jarfiles desktop app maktabti\\javase-2.0.jar
 file.reference.javase-3.1.0.jar=C:\\Users\\SADOK\\Downloads\\javase-3.1.0.jar
+file.reference.javase-3.1.0.jar-1=/Users/abdelazizlahmar/Desktop/Maktabti Libraries/Desktop/javase-3.1.0.jar
 file.reference.javase-3.1.0.jar-2=C:\\Users\\admin\\Downloads\\jarfiles desktop app maktabti\\javase-3.1.0.jar
 file.reference.javax.mail-1.6.2.jar=C:\\Users\\SADOK\\Downloads\\javax.mail-1.6.2.jar
 file.reference.controlsfx-8.40.14.jar=C:\\Users\\admin\\Downloads\\jar_files (1)\\controlsfx-8.40.14.jar
@@ -66,6 +75,7 @@ file.reference.itextpdf-5.5.8.jar-1=C:\\Users\\wassi\\Downloads\\jar_files\\itex
 
 file.reference.javax.mail-1.6.2.jar=C:\\Users\\admin\\Downloads\\javax.mail-1.6.2.jar
 file.reference.javax.mail-1.6.2.jar-1=C:\\Users\\admin\\Downloads\\javax.mail-1.6.2.jar
+file.reference.javax.mail-1.6.2.jar-3=/Users/abdelazizlahmar/Desktop/Maktabti Libraries/Desktop/javax.mail-1.6.2.jar
 file.reference.javax.mail-1.6.2.jar-4=C:\\Users\\admin\\Downloads\\jarfiles desktop app maktabti\\javax.mail-1.6.2.jar
 file.reference.jBCrypt-0.4-sources.jar=C:\\Users\\wassi\\Downloads\\jBCrypt-0.4-sources.jar
 file.reference.jBCrypt-0.4-sources.jar-1=C:\\Users\\admin\\Downloads\\jBCrypt-0.4-sources.jar
@@ -76,6 +86,7 @@ file.reference.jBCrypt-0.4-sources.jar-2=C:\\Users\\wassi\\Downloads\\librairies
 
 file.reference.jBCrypt-0.4-sources.jar-3=C:\\Users\\admin\\Downloads\\jBCrypt-0.4-sources.jar
 
+file.reference.jBCrypt-0.4-sources.jar-4=/Users/abdelazizlahmar/Desktop/Maktabti Libraries/Desktop/jBCrypt-0.4-sources.jar
 file.reference.jBCrypt-0.4-sources.jar-5=C:\\Users\\admin\\Downloads\\jarfiles desktop app maktabti\\jBCrypt-0.4-sources.jar
 
 file.reference.jBCrypt-0.4.jar=C:\\Users\\wassi\\Downloads\\jBCrypt-0.4.jar
@@ -92,7 +103,9 @@ file.reference.jBCrypt-0.4-sources.jar-3=D:\\PIDEV\\Java jar files\\jBCrypt-0.4-
 file.reference.jBCrypt-0.4.jar=C:\\Users\\wassi\\Downloads\\jBCrypt-0.4.jar
 file.reference.jBCrypt-0.4.jar-1=..\\..\\..\\Downloads\\jBCrypt-0.4.jar
 
+file.reference.jBCrypt-0.4.jar-3=/Users/abdelazizlahmar/Desktop/Maktabti Libraries/Desktop/jBCrypt-0.4.jar
 file.reference.jBCrypt-0.4.jar-4=C:\\Users\\admin\\Downloads\\jarfiles desktop app maktabti\\jBCrypt-0.4.jar
+file.reference.jfoenix-8.0.10.jar-1=/Users/abdelazizlahmar/Desktop/Maktabti Libraries/Desktop/jfoenix-8.0.10.jar
 file.reference.jfoenix-8.0.10.jar-2=C:\\Users\\admin\\Downloads\\jarfiles desktop app maktabti\\jfoenix-8.0.10.jar
 file.reference.jfreesvg-2.1.jar=C:\\Users\\SADOK\\Downloads\\jfreesvg-2.1.jar
 
@@ -106,17 +119,35 @@ file.reference.jfoenix-8.0.10.jar=C:\\Users\\wassi\\Downloads\\librairies\\jfoen
 
 
 file.reference.jfreesvg-2.1.jar-1=C:\\Users\\admin\\Downloads\\jar_files (2)\\jfreesvg-2.1.jar
+file.reference.jfreesvg-2.1.jar-2=/Users/abdelazizlahmar/Desktop/Maktabti Libraries/Desktop/jfreesvg-2.1.jar
 file.reference.mysql-connector-java-5.1.23.jar=..\\..\\..\\Downloads\\jar_files\\mysql-connector-java-5.1.23.jar
 
 file.reference.poi-3.17.jar=C:\\Users\\wassi\\Downloads\\librairies\\poi-3.17.jar
+file.reference.poi-3.17.jar-1=/Users/abdelazizlahmar/Desktop/Maktabti Libraries/Desktop/poi-3.17.jar
 file.reference.poi-3.17.jar-2=C:\\Users\\admin\\Downloads\\jarfiles desktop app maktabti\\poi-3.17.jar
 file.reference.slf4j.jar=C:\\Users\\wassi\\Downloads\\librairies\\slf4j.jar
+file.reference.slf4j.jar-1=/Users/abdelazizlahmar/Desktop/Maktabti Libraries/Desktop/slf4j.jar
 file.reference.slf4j.jar-2=C:\\Users\\admin\\Downloads\\jarfiles desktop app maktabti\\slf4j.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
-
+    ${file.reference.controlsfx-8.40.14.jar-5}:\
+    ${file.reference.core-2.0.jar-1}:\
+    ${file.reference.core-3.1.0.jar-2}:\
+    ${file.reference.core-3.5.1.jar-2}:\
+    ${file.reference.fontawesomefx-8.9.jar-1}:\
+    ${file.reference.ini4j-0.5.1.jar-2}:\
+    ${file.reference.itextpdf-5.5.8.jar-5}:\
+    ${file.reference.javase-2.0.jar-1}:\
+    ${file.reference.javase-3.1.0.jar-1}:\
+    ${file.reference.javax.mail-1.6.2.jar-3}:\
+    ${file.reference.jBCrypt-0.4-sources.jar-4}:\
+    ${file.reference.jBCrypt-0.4.jar-3}:\
+    ${file.reference.jfoenix-8.0.10.jar-1}:\
+    ${file.reference.jfreesvg-2.1.jar-2}:\
+    ${file.reference.poi-3.17.jar-1}:\
+    ${file.reference.slf4j.jar-1}
     ${file.reference.itextpdf-5.5.8.jar}:\
     ${file.reference.controlsfx-8.40.14.jar-4}:\
     ${file.reference.ini4j-0.5.1.jar-1}:\
