navigation css +integration pages fixed

--- a/DesktopApp/nbproject/project.properties
+++ b/DesktopApp/nbproject/project.properties
@@ -369,7 +369,22 @@ includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
-
+    ${file.reference.controlsfx-8.40.14.jar-3}:\
+    ${file.reference.core-2.0.jar-1}:\
+    ${file.reference.core-3.1.0.jar-3}:\
+    ${file.reference.core-3.5.1.jar-3}:\
+    ${file.reference.fontawesomefx-8.9.jar-1}:\
+    ${file.reference.ini4j-0.5.1.jar-3}:\
+    ${file.reference.itextpdf-5.5.8.jar-4}:\
+    ${file.reference.jBCrypt-0.4-sources.jar-2}:\
+    ${file.reference.jBCrypt-0.4.jar-3}:\
+    ${file.reference.javase-2.0.jar-1}:\
+    ${file.reference.javase-3.1.0.jar-1}:\
+    ${file.reference.javax.mail-1.6.2.jar-1}:\
+    ${file.reference.jfoenix-8.0.10.jar-3}:\
+    ${file.reference.jfreesvg-2.1.jar-3}:\
+    ${file.reference.poi-3.17.jar-3}:\
+    ${file.reference.slf4j.jar-4}
     ${file.reference.controlsfx-8.40.14.jar-3}:\
     ${file.reference.core-2.0.jar-1}:\
     ${file.reference.core-3.1.0.jar-3}:\
