--- a/DesktopApp/nbproject/private/private.properties
+++ b/DesktopApp/nbproject/private/private.properties
@@ -27,7 +27,7 @@ user.properties.file=C:\\Users\\SADOK\\AppData\\Roaming\\NetBeans\\8.2\\build.pr
 user.properties.file=C:\\Users\\Saleh\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
 
 
-user.properties.file=C:\\Users\\wassi\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\SADOK\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
 
 
 
