changement integration final

--- a/DesktopApp/nbproject/project.properties
+++ b/DesktopApp/nbproject/project.properties
@@ -35,6 +35,7 @@ endorsed.classpath=
 excludes=
 
 file.reference.commons-io-2.11.0.jar=../../../../Desktop/commons-io-2.11.0/commons-io-2.11.0.jar
+file.reference.commons-io-2.11.0.jar-1=C:\\Users\\SADOK\\Downloads\\commons-io-2.11.0-bin (2)\\commons-io-2.11.0\\commons-io-2.11.0.jar
 file.reference.controlsfx-8.40.14.jar-2=C:\\Users\\SADOK\\Downloads\\controlsfx-8.40.14.jar
 file.reference.controlsfx-8.40.14.jar-3=D:\\PIDEV\\Java jar files\\controlsfx-8.40.14.jar
 file.reference.controlsfx-8.40.14.jar-5=C:\\Users\\Saleh\\Desktop\\library maktabti\\controlsfx-8.40.14.jar
@@ -157,6 +158,7 @@ file.reference.slf4j.jar-3=D:\\PIDEV\\Java jar files\\slf4j.jar
 file.reference.slf4j.jar-3=C:\\Users\\Saleh\\Desktop\\library maktabti\\slf4j.jar
 
 file.reference.slf4j.jar-4=D:\\PIDEV\\Java jar files\\slf4j.jar
+file.reference.twilio-9.1.0-jar-with-dependencies.jar=D:\\PIDEV\\Java jar files\\twilio-9.1.0-jar-with-dependencies.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -369,8 +371,7 @@ jar.compress=false
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
     ${file.reference.commons-io-2.11.0.jar}:\
-    ${file.reference.mapbox-sdk-services-3.1.0.jar}\
-    ${file.reference.itextpdf-5.5.8.jar}:\
+    ${file.reference.mapbox-sdk-services-3.1.0.jar}${file.reference.itextpdf-5.5.8.jar}:\
     ${file.reference.controlsfx-8.40.14.jar-4}:\
     ${file.reference.jfreesvg-2.1.jar-1}:\
     ${file.reference.core-2.0.jar-2}:\
@@ -380,13 +381,30 @@ javac.classpath=\
     ${file.reference.javase-3.1.0.jar-2}:\
     ${file.reference.javax.mail-1.6.2.jar-4}:\
     ${file.reference.core-3.1.0.jar-1}:\
-    ${file.reference.core-3.5.1.jar-1}\
-    ${file.reference.mysql-connector-java-5.1.23.jar}:\
+    ${file.reference.core-3.5.1.jar-1}${file.reference.mysql-connector-java-5.1.23.jar}:\
     ${file.reference.ini4j-0.5.1.jar}:\
     ${file.reference.jfoenix-8.0.10.jar}:\
     ${file.reference.poi-3.17.jar}:\
     ${file.reference.slf4j.jar}:\
-    ${file.reference.fontawesomefx-8.9.jar-4}
+    ${file.reference.fontawesomefx-8.9.jar-4}:\
+    ${file.reference.ini4j-0.5.1.jar-3}:\
+    ${file.reference.itextpdf-5.5.8.jar-4}:\
+    ${file.reference.javase-2.0.jar-1}:\
+    ${file.reference.javase-3.1.0.jar-1}:\
+    ${file.reference.javax.mail-1.6.2.jar-1}:\
+    ${file.reference.jBCrypt-0.4.jar-3}:\
+    ${file.reference.controlsfx-8.40.14.jar-3}:\
+    ${file.reference.core-2.0.jar-1}:\
+    ${file.reference.core-3.1.0.jar-3}:\
+    ${file.reference.core-3.5.1.jar-3}:\
+    ${file.reference.fontawesomefx-8.9.jar-1}:\
+    ${file.reference.jBCrypt-0.4-sources.jar-2}:\
+    ${file.reference.jfoenix-8.0.10.jar-3}:\
+    ${file.reference.jfreesvg-2.1.jar-3}:\
+    ${file.reference.poi-3.17.jar-3}:\
+    ${file.reference.slf4j.jar-4}:\
+    ${file.reference.commons-io-2.11.0.jar-1}:\
+    ${file.reference.twilio-9.1.0-jar-with-dependencies.jar}
 
 
 
