update hashed password login

--- a/DesktopApp/nbproject/private/private.properties
+++ b/DesktopApp/nbproject/private/private.properties
@@ -7,7 +7,6 @@ do.jar=true
 
 
 file.reference.controlsfx-8.40.14.jar=C:\\Users\\Gaaloul\\Downloads\\controlsfx-8.40.14.jar
-file.reference.itextpdf-5.5.8.jar=C:\\Users\\admin\\Downloads\\jarfiles desktop app maktabti\\itextpdf-5.5.8.jar
 file.reference.itextpdf-5.5.8.jar-3=D:\\PIDEV\\Java jar files\\itextpdf-5.5.8.jar
 
 javac.debug=true
@@ -27,7 +26,7 @@ user.properties.file=C:\\Users\\SADOK\\AppData\\Roaming\\NetBeans\\8.2\\build.pr
 user.properties.file=C:\\Users\\Saleh\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
 
 
-user.properties.file=C:\\Users\\SADOK\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\admin\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
 
 
 
