--- a/DesktopApp/nbproject/project.properties
+++ b/DesktopApp/nbproject/project.properties
@@ -36,6 +36,7 @@ excludes=
 
 file.reference.commons-io-2.11.0.jar=../../../../Desktop/commons-io-2.11.0/commons-io-2.11.0.jar
 file.reference.commons-io-2.11.0.jar-1=C:\\Users\\SADOK\\Downloads\\commons-io-2.11.0-bin (2)\\commons-io-2.11.0\\commons-io-2.11.0.jar
+file.reference.commons-io-2.11.0.jar-2=C:\\Users\\admin\\Downloads\\jarfiles desktop app maktabti\\commons-io-2.11.0.jar
 file.reference.controlsfx-8.40.14.jar-2=C:\\Users\\SADOK\\Downloads\\controlsfx-8.40.14.jar
 file.reference.controlsfx-8.40.14.jar-3=D:\\PIDEV\\Java jar files\\controlsfx-8.40.14.jar
 file.reference.controlsfx-8.40.14.jar-5=C:\\Users\\Saleh\\Desktop\\library maktabti\\controlsfx-8.40.14.jar
@@ -104,6 +105,7 @@ file.reference.jBCrypt-0.4-sources.jar-2=C:\\Users\\wassi\\Downloads\\librairies
 
 file.reference.jBCrypt-0.4-sources.jar-4=C:\\Users\\Saleh\\Desktop\\library maktabti\\jBCrypt-0.4-sources.jar
 
+file.reference.jBCrypt-0.4-sources.jar-5=C:\\Users\\admin\\Downloads\\jarfiles desktop app maktabti\\jBCrypt-0.4-sources.jar
 file.reference.jBCrypt-0.4-sources.jar-6=C:\\Users\\wassi\\Downloads\\librairies\\jBCrypt-0.4-sources.jar
 file.reference.jBCrypt-0.4.jar=C:\\Users\\wassi\\Downloads\\jBCrypt-0.4.jar
 file.reference.jBCrypt-0.4.jar-1=C:\\Users\\admin\\Downloads\\jBCrypt-0.4.jar
@@ -120,6 +122,7 @@ file.reference.jBCrypt-0.4.jar=C:\\Users\\wassi\\Downloads\\jBCrypt-0.4.jar
 file.reference.jBCrypt-0.4.jar-1=..\\..\\..\\Downloads\\jBCrypt-0.4.jar
 
 file.reference.jBCrypt-0.4.jar-3=D:\\PIDEV\\Java jar files\\jBCrypt-0.4.jar
+file.reference.jBCrypt-0.4.jar-4=C:\\Users\\admin\\Downloads\\jarfiles desktop app maktabti\\jBCrypt-0.4.jar
 file.reference.jBCrypt-0.4.jar-5=C:\\Users\\Saleh\\Desktop\\library maktabti\\jBCrypt-0.4.jar
 file.reference.jfoenix-8.0.10.jar-1=D:\\PIDEV\\Java jar files\\librairies\\librairies\\jfoenix-8.0.10.jar
 file.reference.jfoenix-8.0.10.jar-2=C:\\Users\\SADOK\\Downloads\\librairies\\librairies\\jfoenix-8.0.10.jar
@@ -159,6 +162,7 @@ file.reference.slf4j.jar-3=C:\\Users\\Saleh\\Desktop\\library maktabti\\slf4j.ja
 
 file.reference.slf4j.jar-4=D:\\PIDEV\\Java jar files\\slf4j.jar
 file.reference.twilio-9.1.0-jar-with-dependencies.jar=D:\\PIDEV\\Java jar files\\twilio-9.1.0-jar-with-dependencies.jar
+file.reference.twilio-9.1.0-jar-with-dependencies.jar-1=C:\\Users\\admin\\Downloads\\jarfiles desktop app maktabti\\twilio-9.1.0-jar-with-dependencies.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -330,7 +334,6 @@ file.reference.jBCrypt-0.4-sources.jar-2=C:\\Users\\wassi\\Downloads\\librairies
 
 file.reference.jBCrypt-0.4-sources.jar-3=C:\\Users\\admin\\Downloads\\jBCrypt-0.4-sources.jar
 
-file.reference.jBCrypt-0.4-sources.jar-5=C:\\Users\\admin\\Downloads\\jarfiles desktop app maktabti\\jBCrypt-0.4-sources.jar
 
 file.reference.jBCrypt-0.4.jar=C:\\Users\\wassi\\Downloads\\jBCrypt-0.4.jar
 file.reference.jBCrypt-0.4.jar-1=C:\\Users\\admin\\Downloads\\jBCrypt-0.4.jar
@@ -346,7 +349,6 @@ file.reference.jBCrypt-0.4-sources.jar-3=D:\\PIDEV\\Java jar files\\jBCrypt-0.4-
 file.reference.jBCrypt-0.4.jar=C:\\Users\\wassi\\Downloads\\jBCrypt-0.4.jar
 file.reference.jBCrypt-0.4.jar-1=..\\..\\..\\Downloads\\jBCrypt-0.4.jar
 
-file.reference.jBCrypt-0.4.jar-4=C:\\Users\\admin\\Downloads\\jarfiles desktop app maktabti\\jBCrypt-0.4.jar
 file.reference.jfoenix-8.0.10.jar-2=C:\\Users\\admin\\Downloads\\jarfiles desktop app maktabti\\jfoenix-8.0.10.jar
 file.reference.jfreesvg-2.1.jar=C:\\Users\\SADOK\\Downloads\\jfreesvg-2.1.jar
 
@@ -375,8 +377,6 @@ javac.classpath=\
     ${file.reference.controlsfx-8.40.14.jar-4}:\
     ${file.reference.jfreesvg-2.1.jar-1}:\
     ${file.reference.core-2.0.jar-2}:\
-    ${file.reference.jBCrypt-0.4-sources.jar-5}:\
-    ${file.reference.jBCrypt-0.4.jar-4}:\
     ${file.reference.javase-2.0.jar-2}:\
     ${file.reference.javase-3.1.0.jar-2}:\
     ${file.reference.javax.mail-1.6.2.jar-4}:\
@@ -404,7 +404,18 @@ javac.classpath=\
     ${file.reference.poi-3.17.jar-3}:\
     ${file.reference.slf4j.jar-4}:\
     ${file.reference.commons-io-2.11.0.jar-1}:\
-    ${file.reference.twilio-9.1.0-jar-with-dependencies.jar}
+    ${file.reference.twilio-9.1.0-jar-with-dependencies.jar}:\
+    ${file.reference.core-3.5.1.jar-1}:\
+    ${file.reference.fontawesomefx-8.9.jar-2}:\
+    ${file.reference.ini4j-0.5.1.jar-1}:\
+    ${file.reference.itextpdf-5.5.8.jar}:\
+    ${file.reference.poi-3.17.jar-2}:\
+    ${file.reference.slf4j.jar-2}:\
+    ${file.reference.twilio-9.1.0-jar-with-dependencies.jar-1}:\
+    ${file.reference.jfoenix-8.0.10.jar-2}:\
+    ${file.reference.commons-io-2.11.0.jar-2}:\
+    ${file.reference.jBCrypt-0.4-sources.jar-5}:\
+    ${file.reference.jBCrypt-0.4.jar-4}
 
 
 
